<resources>
    <string name="app_name">Pot monitor</string>
    <string name="temperature_parametrized_C">Temperature: %1$d °C</string>
    <string name="temperature_parametrized_F">Temperature: %1$d °F</string>
    <string name="only_temperature_parametrized_C">%1$d °C</string>
    <string name="only_temperature_parametrized_F">%1$d °F</string>
    <string name="humidity_parametrized">Humidity: %1$d %%</string>
    <string name="time_parametrized">Time: %1$s</string>
    <string name="waterLevel_parametrized">Water level: %1$d %%</string>
    <string name="light_parametrized">Light: %1$d lux</string>
    <string name="raining">Raining</string>
    <string name="not_raining">Not raining</string>
    <string name="soilMoisture_parametrized">Soil moisture: %1$d %%</string>
    <string name="number">Number:</string>
    <string name="water_level_graph">Water level graph</string>
    <string name="temperature_graph">Temperature graph</string>
    <string name="soil_moisture_graph">Soil moisture graph</string>
    <string name="rain_graph">Rain graph</string>
    <string name="light_graph">Light graph</string>
    <string name="humidity_graph">Humidity graph</string>
    <string name="humidity_with_scale">Humidity (%)</string>
    <string name="light_with_scale">Light (lux)</string>
    <string name="water_level_with_scale">Water Level (%)</string>
    <string name="soil_moisture_with_scale">Soil Moisture (%)</string>
    <string name="temperature_with_scale_C">Temperature (°C)</string>
    <string name="temperature_with_scale_F">Temperature (°F)</string>
    <string name="humidity">Humidity</string>
    <string name="light">Light</string>
    <string name="water">Water Level</string>
    <string name="soil_moisture">Soil Moisture</string>
    <string name="temperature">Temperature</string>
    <string name="data_settings">Data settings</string>
    <string name="refresh">Refresh</string>
    <string name="fahrenheit">Fahrenheit (°F)</string>
    <string name="celsius">Celsius (°C)</string>
    <string name="select_c_f">Select °C / °F</string>
    <string name="fromDate">From:</string>
    <string name="toDate">To:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="today">Today</string>
    <string name="sun_moon_symbol">Sun Moon symbol</string>
    <string name="thermometer">Thermometer</string>
    <string name="noRainInTimePeriod">There was no rain in this time period</string>
    <string name="ip">IP</string>
    <string name="select_ip">Select IP</string>
</resources>