<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:weightSum="3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <TextView
            android:id="@+id/tvStateTimeStamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_parametrized" />

        <TextView
            android:id="@+id/tvStateTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/temperature_parametrized_C" />

        <TextView
            android:id="@+id/tvStateHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/humidity_parametrized" />

        <TextView
            android:id="@+id/tvStateLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/light_parametrized" />

        <TextView
            android:id="@+id/tvStateWaterLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/waterLevel_parametrized" />

        <TextView
            android:id="@+id/tvStateSoilMoisture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/soilMoisture_parametrized" />

        <TextView
            android:id="@+id/tvStateRain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/not_raining" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivDayLightSymbol"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_weight="1"/>
</LinearLayout>