<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CserepMain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topPartBottomLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/halfVerticalScreenLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/temperatureVerticalScreenLineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/temperatureVerticalScreenLineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/temperatureLevelLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextClock
            android:id="@+id/dcClock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="64sp"
            android:format12Hour="HH:mm"
            app:layout_constraintBottom_toTopOf="@+id/topPartBottomLine"
            app:layout_constraintEnd_toStartOf="@+id/halfVerticalScreenLine"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/ivDayLightSymbol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/topPartBottomLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/halfVerticalScreenLine"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/sun_moon_symbol" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/only_temperature_parametrized_C"
            app:layout_constraintBottom_toBottomOf="@id/temperatureLevelLine"
            app:layout_constraintTop_toTopOf="@id/temperatureLevelLine"
            app:layout_constraintEnd_toStartOf="@+id/temperatureVerticalScreenLineStart"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="textEnd"/>

        <ImageView
            android:id="@+id/thermometer"
            android:src="@drawable/ic_thermometer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@+id/temperatureVerticalScreenLineEnd"
            app:layout_constraintStart_toEndOf="@+id/temperatureVerticalScreenLineStart"
            app:layout_constraintTop_toTopOf="@id/topPartBottomLine"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/thermometer"
            android:layout_margin="15dp"
            android:scaleType="fitCenter" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:src="@drawable/ic_bar_charts" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>